# buffalo

./: .clippy.toml  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: architecture.md  runbook.md
src/: lib.rs  main.rs
tests/: integration.rs
