[package]
name = "rapid_fire_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# 2026-02-11T01:44:00Z :: 429iroxzbbuw

# 2026-02-11T01:44:00Z :: 61liduaibs4c

# 2026-02-11T01:44:01Z :: vx6cpnababcb

# 2026-02-11T01:44:03Z :: cevds08xai92
